--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sabaLearning
+name: sabalearning
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -28,6 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  firebase_auth: ^0.11.1+7
+  provider: ^4.1.0
+  email_validator: ^1.0.5
+  google_fonts: ^0.3.5
+  flutter_spinkit: ^4.1.2
+
 
 dev_dependencies:
   flutter_test:
