--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  firebase_auth: ^0.11.1+7
+  #firebase_auth: ^0.18.0+1
+  #firebase_storage: ^4.0.0
+  #cloud_firestore: ^0.13.7
+  firebase_core: ^0.5.0
+  cloud_firestore: ^0.14.0+2
+  firebase_database: ^4.0.0
+  firebase_auth: ^0.18.0+1
+  firebase_storage: ^4.0.0
   provider: ^4.1.0
   email_validator: ^1.0.5
   google_fonts: ^0.3.5
   flutter_spinkit: ^4.1.2
+  image_picker: ^0.6.7+7
 
 
 dev_dependencies:
