--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   google_fonts: ^0.3.5
   flutter_spinkit: ^4.1.2
   image_picker: ^0.6.7+7
+  http: ^0.12.2
+  translator: ^0.1.5
+  localstorage: ^3.0.0
+  flutter_form_builder: ^3.13.1
+  flappy_search_bar: ^1.7.2
+  dio: 1.0.0
 
 
 dev_dependencies:
